--- a/public/app/modules/dashboard/dashboard.html
+++ b/public/app/modules/dashboard/dashboard.html
@@ -3,6 +3,43 @@
 
             <section id="content">
                 <div class="container">
+	                <div class="c-analytics row hidden-xs">
+                        <div class="col-sm-4">
+                            <div class="ca-item media">
+                                <div class="pull-right hidden-sm">
+                                    <div class="sparkline-bar-4 cai-chart"><canvas width="106" height="50" style="display: inline-block; width: 106px; height: 50px; vertical-align: top;"></canvas></div>
+                                </div>
+                                <div class="media-body">
+                                    <h2>987,459</h2>
+                                    <small> People Served</small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4">
+                            <div class="ca-item media">
+                                <div class="pull-right hidden-sm">
+                                    <div class="sparkline-bar-5 cai-chart"><canvas width="106" height="50" style="display: inline-block; width: 106px; height: 50px; vertical-align: top;"></canvas></div>
+                                </div>
+                                <div class="media-body">
+                                    <h2>356,785K</h2>
+                                    <small>Orders Placed</small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4">
+                            <div class="ca-item media">
+                                <div class="pull-right hidden-sm">
+                                    <div class="sparkline-bar-6 cai-chart"><canvas width="106" height="50" style="display: inline-block; width: 106px; height: 50px; vertical-align: top;"></canvas></div>
+                                </div>
+                                <div class="media-body">
+                                    <h2>$ 458,778</h2>
+                                    <small>Total Sales</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="card">
                         <div class="card-header">
                             <h2 translate>.HEADTAGLINE</h2>
