fix for grandtotals

--- a/public/app/modules/shifts/shifts.html
+++ b/public/app/modules/shifts/shifts.html
@@ -389,8 +389,8 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>{{employee.Percentage.toFixed(2)}}</small>
-                                            <h3>{{employee.Employee}}</h3>
+                                            <small>{{employee.Employee}}</small>
+                                            <h3>{{employee.Percentage.toFixed(2)}}</h3>
                                         </div>
                                     </div>
 
