--- a/public/app/modules/shifts/shifts.html
+++ b/public/app/modules/shifts/shifts.html
@@ -294,7 +294,7 @@
                                         <div class="media-body">
                                             <span class="badge pull-right">{{currentShift.openingBalance}}</span>
                                             <div class="lgi-heading">Openning Shift</div>
-                                            <small class="lgi-text">{{currentShift.idsshiftopenedby.name}}</small>
+                                            <small class="lgi-text">{{currentShift.openShiftBy}}</small>
                                         </div>
 
                                     </li>
@@ -313,7 +313,7 @@
                                         <div class="media-body">
                                             <span class="badge pull-right">{{currentShift.closingBalance}}</span>
                                             <div class="lgi-heading">Closing Shift</div>
-                                            <small class="lgi-text">{{currentShift.idsshiftopenedby.name}}</small>
+                                            <small class="lgi-text">{{currentShift.closeShiftBy}}</small>
                                         </div>
 
                                     </li>
