--- a/public/app/modules/shifts/shifts.html
+++ b/public/app/modules/shifts/shifts.html
@@ -7,7 +7,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h2>Shifts</h2>
+                    <h2>{{'SHIFTS' | translate}}</h2>
                     <!--<button  class="btn palette-Light-Green bg btn-float waves-effect waves-circle waves-float"><i class="zmdi zmdi-plus"></i></button>-->
 
                 </div>
@@ -39,7 +39,7 @@
                                         <li ng-repeat="head in headers">
                                             <div class="checkbox">
                                                 <label class="dropdown-item">
-                                                    <input name="id" type="checkbox" ng-model="head.show" ng-click="!head.show" class="dropdown-item-checkbox" checked="checked"> {{head.heading}}<i class="input-helper"></i>
+                                                    <input name="id" type="checkbox" ng-model="head.show" ng-click="!head.show" class="dropdown-item-checkbox" checked="checked"> {{head.heading | translate}}<i class="input-helper"></i>
                                                 </label>
                                             </div>
                                         </li>
@@ -56,7 +56,7 @@
                             <tr>
                                 <th>#</th>
                                 <th ng-repeat="head in headers" ng-click="sort('head')" ng-if="head.show">
-                                    {{head.heading}}
+                                    {{head.heading | translate}}
                                 </th>
                                 <th data-column-id="commands" class="text-left" style="">
                                     <a href="javascript:void(0);" class="column-header-anchor ">
@@ -121,7 +121,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Shift Report</h4>
+                <h4 class="modal-title" id="myModalLabel">{{'SHIFTREPORT' | translate}}</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
@@ -140,8 +140,8 @@
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <h4 class="panel-title">
                                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne{{$index}}" aria-expanded="true" aria-controls="collapseOne{{$index}}">
-                                        Invoice: {{sh.clientName}} | invoice #{{sh.invoiceNumber}} <span ng-show="sh.override.isPriceOverride"> | CANCELED </span> <span ng-show="sh.discount"> | DISCOUNT  </span> | total: {{sh.prices.grandtotal}} |<span ng-show="sh.iscash">Cash</span>
-                                            <span ng-hide="sh.iscash">Card</span>
+                                        {{'INVOICE' | translate}}: {{sh.clientName}} | {{'INVOICE' | translate}} #{{sh.invoiceNumber}} <span ng-show="sh.override.isPriceOverride"> | {{'CANCELED' | translate}} </span> <span ng-show="sh.discount"> | {{'DISCOUNT' | translate}}  </span> | total: {{sh.prices.grandtotal}} |<span ng-show="sh.iscash">{{'CASH' | translate}}</span>
+                                            <span ng-hide="sh.iscash">{{'CARD' | translate}}</span>
                                     </a>
                                 </h4>
                             </div>
@@ -245,7 +245,7 @@
                         <div class="card c-dark palette-Light-Blue-400
  bg">
                             <div class="card-header p-b-0">
-                                <h2>Shift Results </h2>
+                                <h2>{{'SHIFTRESULTS' | translate}} </h2>
                             </div>
                             <div class="card-body">
 
@@ -257,8 +257,8 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Total Cost</small>
-                                            <h3>{{currentShift.totalCost}}</h3>
+                                            <small>{{'TOTALCOSTS' | translate}}</small>
+                                            <h3>{{currentShift.totalCost.toLocaleString('en')}}</h3>
                                         </div>
                                     </div>
 
@@ -268,12 +268,12 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Total Sales</small>
-                                            <h3>{{currentShift.totalSales}}</h3>
+                                            <small>{{'SALESTOTAL' | translate}}</small>
+                                            <h3>{{currentShift.totalSales.toLocaleString('en')}}</h3>
                                         </div>
                                     </div>
 
-                                    <div class="list-group-item media">
+                                   <!-- <div class="list-group-item media">
                                         <div class="pull-right hidden-sm">
                                             <div class="sparkline-bar-3"></div>
                                         </div>
@@ -282,7 +282,19 @@
                                             <small>Earnings</small>
                                             <h3>{{currentShift.totalEarnings}}</h3>
                                         </div>
+                                    </div> -->
+                                    
+                                      <div class="list-group-item media">
+                                        <div class="pull-right hidden-sm">
+                                            <div class="sparkline-bar-2"></div>
+                                        </div>
+
+                                        <div class="media-body ns-item">
+                                            <small>{{'TAX' | translate}}</small>
+                                            <h3>{{(currentShift.totalSales * 13/100).toLocaleString('en')}}</h3>
+                                        </div>
                                     </div>
+                                    
                                 </div>
 
                                 <div class="p-5"></div>
@@ -290,7 +302,7 @@
                         </div>
                         <div class="card">
                             <div class="card-header ch-alt p-b-0">
-                                <h4>Cashier History </h4>
+                                <h4>{{'CASHIERHISTORY' | translate}} </h4>
                             </div>
 
                             <div class="card-body">
@@ -300,8 +312,8 @@
                                     <li class="list-group-item media">
 
                                         <div class="media-body">
-                                            <span class="badge pull-right">{{currentShift.openingBalance}}</span>
-                                            <div class="lgi-heading">Openning Shift</div>
+                                            <span class="badge pull-right">{{currentShift.openingBalance.toLocaleString('en')}}</span>
+                                            <div class="lgi-heading">{{'OPENINGSHIFT' | translate}}</div>
                                             <small class="lgi-text">{{currentShift.openShiftBy}}</small>
                                         </div>
 
@@ -309,8 +321,8 @@
                                     <li class="list-group-item media" ng-repeat="edit in currentShift.edits">
 
                                         <div class="media-body">
-                                            <span class="badge pull-right" ng-if="edit.opertaiontype=='Add'">+ {{edit.editamount}}</span>
-                                            <span class="badge pull-right" ng-if="edit.opertaiontype=='Remove'">- {{edit.editamount}}</span>
+                                            <span class="badge pull-right" ng-if="edit.opertaiontype=='Add'">+ {{edit.editamount.toLocaleString('en')}}</span>
+                                            <span class="badge pull-right" ng-if="edit.opertaiontype=='Remove'">- {{edit.editamount.toLocaleString('en')}}</span>
                                             <div class="lgi-heading">{{edit.observation}}</div>
                                             <small class="lgi-text">{{edit.editby}}</small>
                                         </div>
@@ -319,8 +331,8 @@
                                     <li class="list-group-item media">
 
                                         <div class="media-body">
-                                            <span class="badge pull-right">{{currentShift.closingBalance}}</span>
-                                            <div class="lgi-heading">Closing Shift</div>
+                                            <span class="badge pull-right">{{currentShift.closingBalance.toLocaleString('en')}}</span>
+                                            <div class="lgi-heading">{{'CLOSINGSHIFT' | translate}}</div>
                                             <small class="lgi-text">{{currentShift.closeShiftBy}}</small>
                                         </div>
 
@@ -336,7 +348,7 @@
                         <div class="card c-dark palette-Green-400
  bg">
                             <div class="card-header p-b-0">
-                                <h2>Cash/Card Ratio </h2>
+                                <h2>{{'PAYMENTMETHODS' | translate}} </h2>
                             </div>
                             <div class="card-body">
 
@@ -348,8 +360,8 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Total Cash</small>
-                                            <h3>{{currentShift.totalCash}}</h3>
+                                            <small>Total {{'CASH' | translate}}</small>
+                                            <h3>{{currentShift.totalCash.toLocaleString('en')}}</h3>
                                         </div>
                                     </div>
 
@@ -359,8 +371,8 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Total Credit</small>
-                                            <h3>{{currentShift.totalCredit}}</h3>
+                                            <small>Total {{'CARD' | translate}}</small>
+                                            <h3>{{currentShift.totalCredit.toLocaleString('en')}}</h3>
                                         </div>
                                     </div>
 
@@ -370,8 +382,8 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Total income</small>
-                                            <h3>{{currentShift.totalCash + currentShift.totalCredit}}</h3>
+                                            <small>Total</small>
+                                            <h3>{{(currentShift.totalCash + currentShift.totalCredit).toLocaleString('en')}}</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -383,7 +395,7 @@
                         <div class="card c-dark palette-Blue-Grey-400
  bg">
                             <div class="card-header p-b-0">
-                                <h2>Employee's 10%</h2>
+                                <h2>{{'TOTALEMPLOYEES' | translate}} 10%</h2>
 
                             </div>
                             <div class="card-body">
@@ -398,7 +410,7 @@
 
                                         <div class="media-body ns-item">
                                             <small>{{employee.Employee}}</small>
-                                            <h3>{{employee.Percentage.toFixed(2)}}</h3>
+                                            <h3>{{employee.Percentage.toLocaleString('en')}}</h3>
                                         </div>
                                     </div>
 
@@ -415,7 +427,7 @@
                         <div class="card c-dark palette-Teal-400
  bg">
                             <div class="card-header p-b-0">
-                                <h2>Earnings per person</h2>
+                                <h2>{{'STADISTICS' | translate}}</h2>
 
                             </div>
                             <div class="card-body">
@@ -428,7 +440,7 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>People Served</small>
+                                            <small>{{'TOTALPEOPLE' | translate}}</small>
                                             <h3>{{currentShift.totalServed}}</h3>
                                         </div>
                                     </div>
@@ -439,7 +451,7 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Average Per Person</small>
+                                            <small>{{'AVERAGEPERPERSON' | translate}}</small>
                                             <h3>{{currentShift.avgPerPerson}}</h3>
                                         </div>
                                     </div>
@@ -454,7 +466,7 @@
                         <div class="card c-dark palette-Purple-400
  bg">
                             <div class="card-header p-b-0">
-                                <h2>Invoices and orders</h2>
+                                <h2>{{'Bills' | translate}} & {{'Orders' | translate}}</h2>
 
                             </div>
                             <div class="card-body">
@@ -467,7 +479,7 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Invoices </small>
+                                            <small>{{'Bills' | translate}}  </small>
                                             <h3>{{currentShift.invoices.length}}</h3>
                                         </div>
                                     </div>
@@ -478,7 +490,7 @@
                                         </div>
 
                                         <div class="media-body ns-item">
-                                            <small>Orders</small>
+                                            <small>{{'Orders' | translate}}</small>
                                             <h3>{{currentShift.orders.length}}</h3>
                                         </div>
                                     </div>
@@ -500,7 +512,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">{{'CLOSE' | translate}}</button>
             </div>
         </div>
     </div>
