--- a/public/app/modules/user/user.html
+++ b/public/app/modules/user/user.html
@@ -66,7 +66,7 @@
                         <thead>
                             <tr>
                             <th>#</th>
-                                <th ng-repeat="head in headers" ng-click="sort('head')" ng-if="head.show">{{head.heading}}
+                                <th ng-repeat="head in headers" ng-click="sort('head')" ng-if="head.show">{{ head.heading | translate}}
                                 </th>
                                 <!-- <th ng-click="sort('first_name')" ng-if="firstname">First Name
                                 </th>
