--- a/public/app/modules/dashboard/dashboard.html
+++ b/public/app/modules/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 
             <section id="content">
                 <div class="container">
-	                <div class="c-analytics row hidden-xs">
+	             <!--   <div class="c-analytics row hidden-xs">
                         <div class="col-sm-4">
                             <div class="ca-item media">
                                 <div class="pull-right hidden-sm">
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="card">
                         <div class="card-header">
                             <h2 translate>.HEADTAGLINE</h2>
